# cmd/delivery/http/code_delivery.go
@@ -2,10 +2,11 @@ package http
 
 import (
 	"bytes"
+	"encoding/json"
+	"errors"
 	"fmt"
 	"github.com/gin-gonic/gin"
 	"github.com/yarikTri/network-channel-layer/cmd/code"
-	"io"
 	"log"
 	"math/rand"
 	"net/http"
@@ -16,62 +17,71 @@ const frameErrorProbability = 7
 
 const transferEndpoint = "http://localhost:8080/encoded-message/transfer"
 
+type CodeRequest struct {
+	Sender        uint32 `json:"sender"`
+	Timestamp     uint32 `json:"timestamp"`
+	PartMessageID uint32 `json:"part_message_id"`
+	Message       []byte `json:"message"`
+}
+
+type CodeTransferRequest struct {
+	Sender        uint32 `json:"sender"`
+	Timestamp     uint32 `json:"timestamp"`
+	PartMessageID uint32 `json:"part_message_id"`
+	Message       []byte `json:"message"`
+	FlagError     bool   `json:"flag_error"`
+}
+
 // Code
 // @Summary		Code network flow
 // @Tags		Code
 // @Description	Осуществляет кодировку сообщения в код Хэмминга [15, 11], внесение ошибки в каждый закодированный 15-битовый кадр с вероятностью 7%, исправление внесённых ошибок, раскодировку кадров в изначальное сообщение. Затем отправляет результат в Procuder-сервис транспортного уровня. Сообщение может быть потеряно с вероятностью 1%.
 // @Accept		json
-// @Param		request		body		[]byte		true	"Сообщение"
-// @Success		200			{object}	nil					"Кодировка и отправка запущены"
+// @Produce     json
+// @Param		request		body		CodeRequest		true	"Информация о сегменте сообщения"
+// @Success		200			{object}	nil					"Обработка и отправка запущены"
 // @Failure		400			{object}	nil					"Ошибка при чтении сообщения"
 // @Router		/code [post]
 func Code(c *gin.Context) {
-	rawRequest, err := io.ReadAll(c.Request.Body)
-	if err != nil {
+	var codeRequest CodeRequest
+	if err := c.Bind(codeRequest); err != nil {
 		c.Data(http.StatusBadRequest, c.ContentType(), []byte("Can't read request body"))
 		return
 	}
 
-	go transfer(rawRequest)
+	go transfer(codeRequest)
 
 	c.Data(http.StatusOK, c.ContentType(), []byte{})
 }
 
-func transfer(rawData []byte) {
+func transfer(codeRequest CodeRequest) {
 	if rand.Intn(100) < frameLoseProbability {
 		fmt.Println("[Info] Message lost")
 		return
 	}
 
-	coder := code.Coder{}
-
-	// Кодирование полученных данных
-	encodedFrames, err := coder.Encode(rawData)
+	processedMessage, hasErrors, err := processMessage(codeRequest.Message)
 	if err != nil {
-		log.Println("[Error] Encoding issue")
+		fmt.Printf("[Error] Error while processing message: %s\n", err.Error())
 		return
-	}
-
-	// Внесение ошибок в закодированные кадры
-	encodedFrames = coder.SetRandomErrors(encodedFrames, frameErrorProbability)
-
-	// Исправление ошибок и декодирование кадров
-	decodedFrames, err := coder.FixAndDecode(encodedFrames)
-	if err != nil {
-		log.Println("[Error] Decoding issue")
-		return
-	}
-
-	// Валидация совпадения пришедших данных и выходных
-	for ind, _byte := range rawData {
-		if _byte != decodedFrames[ind] {
-			log.Println("[Error] Frames inequality")
-			return
-		}
 	}
 
 	// Отправка данных в Producer
-	req, err := http.NewRequest("POST", transferEndpoint, bytes.NewBuffer(decodedFrames))
+	transferReqBody, err := json.Marshal(
+		CodeTransferRequest{
+			Sender:        codeRequest.Sender,
+			Timestamp:     codeRequest.Timestamp,
+			PartMessageID: codeRequest.PartMessageID,
+			Message:       processedMessage,
+			FlagError:     hasErrors,
+		},
+	)
+	if err != nil {
+		fmt.Printf("[Error] Can't create transfer request: %s\n", err.Error())
+		return
+	}
+
+	req, err := http.NewRequest("POST", transferEndpoint, bytes.NewBuffer(transferReqBody))
 	if err != nil {
 		fmt.Printf("[Error] Can't create transfer request: %s\n", err.Error())
 		return
@@ -88,4 +98,39 @@ func transfer(rawData []byte) {
 	if resp.StatusCode != http.StatusOK {
 		fmt.Printf("[Info] Unexpected status code while transferring %d\n", resp.StatusCode)
 	}
+}
+
+// Возвращает декодированные биты (в случае успеха), флаг ошибки декодирования
+// и ошибку исполнения при наличии
+func processMessage(message []byte) ([]byte, bool, error) {
+	coder := code.Coder{}
+
+	// Кодирование полученных данных
+	encodedFrames, err := coder.Encode(message)
+	if err != nil {
+		log.Println("[Error] Encoding issue")
+		return nil, false, errors.New(fmt.Sprintf("Enocding issue: %s", err.Error()))
+	}
+
+	// Внесение ошибок в закодированные кадры
+	encodedFrames = coder.SetRandomErrors(encodedFrames, frameErrorProbability)
+
+	// Исправление ошибок и декодирование кадров
+	decodedFrames, err := coder.FixAndDecode(encodedFrames)
+	if err != nil {
+		log.Println("[Error] Decoding issue")
+		return nil, false, errors.New(fmt.Sprintf("Decoding issue: %s", err.Error()))
+	}
+
+	// Валидация совпадения пришедших данных и выходных
+	hasError := false // Что-то вроде флага 500-ки при декодировании сообщения
+	for ind, _byte := range message {
+		if _byte != decodedFrames[ind] {
+			log.Println("[Error] Frames inequality")
+			hasError = true
+			break
+		}
+	}
+
+	return decodedFrames, hasError, nil
 }
